<resources>
    <string name="app_name">Birdy</string>
    <string name="find_by_name_hint">Type something...</string>
    <string name="find_person_by_location_hint">Type in the desired location...</string>
    <string name="search">Search</string>
    <string name="results_label">Here\'re the most suitable results...</string>
    <string name="find">Find</string>
    <string name="top">Top</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="my_friends">My friends</string>
    <string name="grant_camera_permission">Please, grant camera permission!</string>
    <string name="canceled">Canceled</string>
    <string name="grant_location_permission">Please grant your location permission</string>
    <string name="login_welcome">Sign In</string>
    <string name="next_sign_up_button">Continue</string>
    <string name="signup_title_text">Sign Up</string>
    <string name="copyrights">© 2020 Birdy Inc. All Rights Reserved</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Sign in</string>
    <string name="processing_progress">Processing</string>
    <string name="dont_have_account">Don\'t have an account? Create one!</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="middle_name_hint">Middle name (optional)</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="city_hint">City</string>
    <string name="password_repeated_hint">Repeat password</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="already_have_account">Already have an account? Log in!</string>
    <string name="empty_fields">Fields must not be empty!</string>
    <string name="home">Home</string>
    <string name="passwords_do_not_match">"Passwords don't match! "</string>
    <string name="no_connection">No internet connection! Try again later!</string>
    <string name="error_weak_password">Your password is weak</string>
    <string name="my_birds">My found birds</string>
    <string name="profile_settings">Profile settings</string>
    <string name="report">Report an error</string>
    <string name="my_profile">My profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="location">" location"</string>
    <string name="find_users">Find users</string>
    <string name="grant_audio_permission">Please, grant audio permission!</string>
    <string name="record_audio">Record audio</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="start_time">00:00:00</string>
    <string name="enter_top_amount">Enter Top Amount</string>
    <string name="forgot_password">Forgot password</string>
    <string name="yes">Yes</string>
    <string name="no">Close</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="reset_pass_button">Reset password</string>
    <string name="almost_done">Almost done</string>
    <string name="check_your_email_to_reset_pass">Check your email to reset password</string>
    <string name="ok">Ok</string>
    <string name="open_email_app">Open Email</string>
    <string name="tfa_email_hint">Enter code we sent to your email</string>
    <string name="tfa_hint">Code</string>
    <string name="continue_action">Continue</string>
</resources>