<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/ic_home_icon"/>
    <item
        android:id="@+id/top"
        android:enabled="true"
        android:title="@string/top"
        android:icon="@drawable/ic_top_icon"/>
    <item
        android:id="@+id/find_bird"
        android:enabled="true"
        android:title="@string/find"
        android:icon="@drawable/ic_search_icon"/>
    <item
        android:id="@+id/messages"
        android:enabled="true"
        android:title="@string/messages"
        android:icon="@drawable/ic_location_icon_grey"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_icon"/>
</menu>