<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.lifecycle.MutableLiveData" />

        <variable
            name="activity"
            type="com.example.birdyapp.features.recovery.TfaActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tfa_title_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="27dp"
                    android:text="@string/tfa_email_hint"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otpInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="@dimen/standard_padding"
                    android:layout_marginEnd="27dp"
                    android:elevation="4dp"
                    android:hint="@string/tfa_hint"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tfa_title_text_view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="32"
                        android:maxLines="1"
                        android:text='@={activity.otpCode}' />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="@dimen/double_margin"
                    android:layout_marginEnd="27dp"
                    android:background="@drawable/background_button"
                    android:elevation="2dp"
                    android:enabled='@{activity.otpCode.length() != 0}'
                    android:text="@string/continue_action"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/otpInputLayout" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>